
v0.0.6

* [BGBUILD-109] readdir64 bugfix for i386 base AMIs

v0.0.5

* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-57] Additional packages specified in EC2 plugin aren't installed
* [BGBUILD-67] Add Fedora 14 support for S3 delivery plugin: AMI type

v0.0.4

* [BGBUILD-49] Not able to log in to CentOS AMIs
* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.3

* [BGBUILD-43] ec2-ami-tools is not usable on EC2 appliances

v0.0.2

* [BGBUILD-39] EC2 plugin does not have "require 'tempfile'" but Temfile is used causing an error

v0.0.1

* First release