@@ -1,6 +1,7 @@
 
 v0.0.6
 
+* [BGBUILD-111] Don't install ec2-ami-tools by default in AMIs
 * [BGBUILD-109] readdir64 bugfix for i386 base AMIs
 
 v0.0.5
